--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+header {
+  height: 110px;
+  width: 100%;
+  position: fixed;
+  background-color: white;
+  /* background-color: transparent; */
+  top: 0;
+  left: 0;
+  z-index: 99999999;
+  border-bottom: 1px solid gainsboro;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height: 100%;
+}
+#h-logo {
+  width: 110px;
+}
+header nav ul {
+  display: flex;
+  gap: 40px;
+  transition: 0.4s;
+  background-color: white;
+}
+header nav ul li a {
+  color: #0f2f64;
+  font-size: 16px;
+  font-weight: 500;
+}
+header nav ul li a.active {
+  color: #1e5dbc;
+  font-size: 16px;
+}
+#menu {
+  width: 30px;
+  display: none;
 }
 
-.App-link {
-  color: #61dafb;
+header.scrolled {
+  position: fixed;
+  animation: headerAnimation 0.4s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes headerAnimation {
+  0% {
+    top: -110px;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    top: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  #menu {
+    display: block;
+  }
+  header nav {
+    overflow: hidden;
+    position: absolute;
+    top: 110px; /* Position the nav below the header */
+    right: 0;
+    left: 0; /* Ensure it spans the full width */
+    z-index: 2;
+    gap: 10px;
+    min-width: 100%;
+    transition: transform 0.4s, opacity 0.4s;
+    background-color: white; /* Ensure background color for visibility */
+  }
+  header nav.menuShow {
+    transform: translateY(0);
+    opacity: 1;
+    pointer-events: auto; /* Enable interaction */
+  }
+  header nav:not(.menuShow) {
+    transform: translateY(-100%);
+    opacity: 0;
+    pointer-events: none; /* Disable interaction when hidden */
+  }
+  header nav ul {
+    flex-direction: column;
+    overflow-y: auto;
+    padding: 25px;
+    max-height: calc(100vh - 110px); /* Adjust to vh */
   }
 }
