--- a/src/components/css/Cover.css
+++ b/src/components/css/Cover.css
@@ -130,6 +130,17 @@
   transform: translateY(40px);
   z-index: 10000;
   opacity: 0;
+  color: white;
+  background: rgb(16, 94, 182);
+  background: linear-gradient(
+    90deg,
+    rgba(16, 94, 182, 1) 0%,
+    rgba(255, 255, 255, 0) 93%
+  );
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .slider .slides:nth-child(1) .content,
 .slider .slides:nth-child(2) .content {
@@ -139,12 +150,19 @@
 }
 .content h2 {
   font-size: 4em;
-  color: white;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.7);
 }
 .content p {
   color: white;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.7);
+}
+.content ul li {
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.7);
+  font-size: 24px;
+}
+.slides .container{
+  height: 100%;
+  width: 100%;
 }
 @media (max-width: 768px) {
   /* .slider{
@@ -165,7 +183,6 @@
   .slides:nth-child(3) {
     left: 0;
     bottom: 20px;
-
   }
 
   .slides:nth-child(4) {
@@ -175,11 +192,9 @@
   .slides:nth-child(5) {
     left: 70%;
     bottom: 20px;
-
   }
   .slides:nth-child(6) {
     left: 100%;
     bottom: 20px;
-
   }
 }
